--- a/contact.html
+++ b/contact.html
@@ -28,10 +28,25 @@
         </div>
     </nav>
     <section class="contact">
-        <h1 class="title">
-            TALK TO US
-        </h1>
+        <div class="contact-header">
+            <h1 class="title">
+                TALK TO US
+            </h1>
+            <p>WE WOULD LOVE TO HEAR FROM YOU</p>
+        </div>
         <div class="contact-wrapper">
+            <div class="map">
+                <div class="mapouter">
+                    <div class="gmap_canvas">
+                        <iframe width="600" height="500" id="gmap_canvas" 
+                            src="https://maps.google.com/maps?q=aerospace%20logistics%20center&t=&z=13&ie=UTF8&iwloc=&output=embed" 
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+                        </iframe>
+                        <a href="https://123movies-to.org"></a><br>
+                        <a href="https://www.embedgooglemap.net">embedgooglemap.net</a>
+                    </div>
+                </div>
+            </div>
             <div class="contact-info">
                 <p>We Would Love To Hear From You</p>
                 <div class="email-info">
@@ -40,11 +55,8 @@
                 <div class="phone-info">
                     <p>+254712345678</p>
                 </div>
-                <div class="socials">
-                    <h5>Our Socials</h5>
-                    <div class="social-icons">
-        
-                    </div>
+                <div class="pin">
+                    <p>AEROSPACE LOGISTICS CENTER</p>
                 </div>
             </div>
             <form action="">
