--- a/index.html
+++ b/index.html
@@ -97,27 +97,26 @@
                 <div class="perk">
                     <h5>LUXURY AND COMFORT</h5>
                     <p>
-                        our charter offer world-class services to all our clientele so you don't have to 
+                        )ur charter offer world-class services to all our clientele so you don't have to 
                         compromise of luxury and comfort for convenience.
                     </p>
                 </div>
                 <div class="perk">
                     <h5>SAFETY AND CONFIDENTIALITY</h5>
                     <p>
-                        with the range of our clientele, safety and confidentiality is paramount
+                        Client and cargo confidentiality and safety is our cornerstore.
                     </p>
                 </div>
                 <div class="perk">
                     <h5>MANY AIRPORTS</h2>
                     <p>
-                        being a private air charter, we have access to many airports all around the world unlike
-                        commercial planes, ensuring we take you as close to your final destination for maximum convenience
+                        We have access to more airports unlike commercial flights, ensuring we get you as close as possible to your final destination.
                     </p>
                 </div>
                 <div class="perk">
                     <h5>PERSONAL SCHEDULE</h5>
                     <p>
-                        our clients enjoy all year round services as per their personal schedule
+                        Our clients enjoy all year round services as per their personal schedule
                     </p>
                 </div>
             </div>
@@ -165,10 +164,25 @@
         </div>
     </section>
     <section class="contact">
-        <h1 class="title">
-            TALK TO US
-        </h1>
+        <div class="contact-header">
+            <h1 class="title">
+                TALK TO US
+            </h1>
+            <p>WE WOULD LOVE TO HEAR FROM YOU</p>
+        </div>
         <div class="contact-wrapper">
+            <div class="map">
+                <div class="mapouter">
+                    <div class="gmap_canvas">
+                        <iframe width="600" height="500" id="gmap_canvas" 
+                            src="https://maps.google.com/maps?q=aerospace%20logistics%20center&t=&z=13&ie=UTF8&iwloc=&output=embed" 
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+                        </iframe>
+                        <a href="https://123movies-to.org"></a><br>
+                        <a href="https://www.embedgooglemap.net">embedgooglemap.net</a>
+                    </div>
+                </div>
+            </div>
             <div class="contact-info">
                 <p>We Would Love To Hear From You</p>
                 <div class="email-info">
@@ -177,11 +191,8 @@
                 <div class="phone-info">
                     <p>+254712345678</p>
                 </div>
-                <div class="socials">
-                    <h5>Our Socials</h5>
-                    <div class="social-icons">
-        
-                    </div>
+                <div class="pin">
+                    <p>AEROSPACE LOGISTICS CENTER</p>
                 </div>
             </div>
             <form action="">
