--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="hero">
         <div class="hero-wrapper">
             <div class="heromain">
-                <h1>MARQEE AIR CHARTER</h1>
+                <h1>MARQEE AIR CHARTERS</h1>
                 <p>YOUR TRAVEL PARTNER</p>
             </div>
             <a href="contact.html" class="cta">
