--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body> 
         
     <!--navigation-->
-    <nav class="navbar fixed">
+    <nav class="navbar">
         <a href="index.html" class="navbar_logo">
             <img src="./Assets/Images/marqee-removebg-preview.png" alt="">
         </a>
@@ -51,7 +51,7 @@
         </div>
     </div>
     <section class="counter">
-        <p>Marqee Air Charters proudly raises the bar and exceeds the standard for luxury and corporate 
+        <p class="counter-main">Marqee Air Charters proudly raises the bar and exceeds the standard for luxury and corporate 
             private jet charter services. We pride ourselves on offering a professional and 
             personalised service.
         </p>
@@ -61,27 +61,26 @@
                 <div class="perk">
                     <h5>LUXURY AND COMFORT</h5>
                     <p>
-                        our charter offer world-class services to all our clientele so you don't have to 
+                        Our charter offer world-class services to all our clientele so you don't have to 
                         compromise of luxury and comfort for convenience.
                     </p>
                 </div>
                 <div class="perk">
                     <h5>SAFETY AND CONFIDENTIALITY</h5>
                     <p>
-                        with the range of our clientele, safety and confidentiality is paramount
+                        Client and cargo confidentiality and safety is our cornerstore.
                     </p>
                 </div>
                 <div class="perk">
                     <h5>MANY AIRPORTS</h2>
                     <p>
-                        being a private air charter, we have access to many airports all around the world unlike
-                        commercial planes, ensuring we take you as close to your final destination for maximum convenience
+                        We have access to more airports unlike commercial flights, ensuring we get you as close as possible to your final destination.
                     </p>
                 </div>
                 <div class="perk">
                     <h5>PERSONAL SCHEDULE</h5>
                     <p>
-                        our clients enjoy all year round services as per their personal schedule
+                        Our clients enjoy all year round services as per their personal schedule
                     </p>
                 </div>
             </div>
