--- a/fleet.html
+++ b/fleet.html
@@ -11,7 +11,7 @@
 <body> 
         
     <!--navigation-->
-    <nav class="navbar fixed">
+    <nav class="navbar">
         <a href="index.html" class="navbar_logo">
             <img src="./Assets/Images/marqee-removebg-preview.png" alt="">
         </a>
