--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body> 
         
     <!--navigation-->
-    <nav class="navbar fixed">
+    <nav class="navbar">
         <a href="index.html" class="navbar_logo">
             <img src="./Assets/Images/marqee-removebg-preview.png" alt="">
         </a>
@@ -49,7 +49,6 @@
                 need to be, when you need to be there – safely and comfortably. Contact us today for your 
                 personalized quote.
             </p>
-        <a href="about.html">MORE</a>
     </section>
     <div class="abouttwo">
         <div class="mission">
@@ -87,7 +86,7 @@
         </div>
     </div>
     <section class="counter">
-        <p>Marqee Air Charters proudly raises the bar and exceeds the standard for luxury and corporate 
+        <p class="counter-main">Marqee Air Charters proudly raises the bar and exceeds the standard for luxury and corporate 
             private jet charter services. We pride ourselves on offering a professional and 
             personalised service.
         </p>
@@ -97,7 +96,7 @@
                 <div class="perk">
                     <h5>LUXURY AND COMFORT</h5>
                     <p>
-                        )ur charter offer world-class services to all our clientele so you don't have to 
+                        Our charter offer world-class services to all our clientele so you don't have to 
                         compromise of luxury and comfort for convenience.
                     </p>
                 </div>
@@ -220,10 +219,10 @@
             <div class="footer-location">
                 <p>AEROSPACE LOGISTICS CENTRE</p> 
                 <p>WILSON AIRPORT ROAD</p> 
-                <p>Langata District</p> 
-                <p>P. O. Box 2045</p> 
+                <p>Langata</p> 
+                <p>P. O. Box 2055</p> 
                 <p>Postal Code 00100</p>  
-                <p>County : Nairobi</p>   
+                <p>Nairobi, Kenya</p>   
             </div>
             <div class="subscribe">
                 <h2>Subscribe To Our Newsletter</h2>
