--- a/about.html
+++ b/about.html
@@ -112,10 +112,9 @@
             <div class="footer-location">
                 <p>AEROSPACE LOGISTICS CENTRE</p> 
                 <p>WILSON AIRPORT ROAD</p> 
-                <p>Langata District</p> 
-                <p>P. O. Box 2045</p> 
-                <p>Postal Code 00100</p>  
-                <p>County : Nairobi</p>   
+                <p>Langata</p> 
+                <p>P. O. Box 2045-00100</p> 
+                <p>Nairobi, Kenya</p>   
             </div>
             <div class="subscribe">
                 <h2>Subscribe To Our Newsletter</h2>
