--- a/contact.html
+++ b/contact.html
@@ -50,10 +50,17 @@
             <div class="contact-info">
                 <p>We Would Love To Hear From You</p>
                 <div class="email-info">
-                    <p>marqeeaircharters@gmail.com</p>
+                    <p><a href="mailto:info@marqeeaircharters.co.ke" class="contact-link">info@marqeeaircharters.co.ke</a></p>
                 </div>
                 <div class="phone-info">
-                    <p>+254712345678</p>
+                    <p><a href="tel:0774124673" class="contact-link">+254-774-124-673</a></p>
+                </div>
+                <div class="phone-info">
+                    <p>
+                        <a href="https://wa.me/254774124673" class="contact-link">
+                            +254-774-124-673
+                        </a>
+                    </p>
                 </div>
                 <div class="pin">
                     <p>AEROSPACE LOGISTICS CENTER</p>
@@ -84,10 +91,9 @@
             <div class="footer-location">
                 <p>AEROSPACE LOGISTICS CENTRE</p> 
                 <p>WILSON AIRPORT ROAD</p> 
-                <p>Langata District</p> 
-                <p>P. O. Box 2045</p> 
-                <p>Postal Code 00100</p>  
-                <p>County : Nairobi</p>   
+                <p>Langata</p> 
+                <p>P. O. Box 2045-00100</p> 
+                <p>Nairobi, Kenya</p>   
             </div>
             <div class="subscribe">
                 <h2>Subscribe To Our Newsletter</h2>
