--- a/index.html
+++ b/index.html
@@ -185,12 +185,23 @@
             <div class="contact-info">
                 <p>We Would Love To Hear From You</p>
                 <div class="email-info">
-                    <p>marqeeaircharters@gmail.com</p>
+                    <img src="./Assets/Images/email.png" alt="" class="contact-icon">
+                    <p><a href="mailto:info@marqeeaircharters.co.ke" class="contact-link">info@marqeeaircharters.co.ke</a></p>
                 </div>
                 <div class="phone-info">
-                    <p>+254712345678</p>
+                    <img src="./Assets/Images/phone-call.png" alt="" class="contact-icon">
+                    <p><a href="tel:0774124673" class="contact-link">+254-774-124-673</a></p>
+                </div>
+                <div class="phone-info">
+                    <img src="./Assets/Images/whatsapp.png" alt="" class="contact-icon">
+                    <p>
+                        <a href="https://wa.me/254774124673" class="contact-link">
+                            +254-774-124-673
+                        </a>
+                    </p>
                 </div>
                 <div class="pin">
+                    <img src="./Assets/Images/location.png" alt="" class="contact-icon">
                     <p>AEROSPACE LOGISTICS CENTER</p>
                 </div>
             </div>
@@ -220,8 +231,7 @@
                 <p>AEROSPACE LOGISTICS CENTRE</p> 
                 <p>WILSON AIRPORT ROAD</p> 
                 <p>Langata</p> 
-                <p>P. O. Box 2045</p> 
-                <p>Postal Code 00100</p>  
+                <p>P. O. Box 2045-00100</p> 
                 <p>Nairobi, Kenya</p>   
             </div>
             <div class="subscribe">
