--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                 <div class="phone-info">
                     <img src="./Assets/Images/phone-call.png" alt="" class="contact-icon">
                     <p><a href="tel:0774124673" class="contact-link">+254-774-124-673</a></p>
+                    <p><a href="tel:0101637251" class="contact-link">+254-101-637-251</a></p>
                 </div>
                 <div class="phone-info">
                     <img src="./Assets/Images/whatsapp.png" alt="" class="contact-icon">
