--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,7 @@
                 </div>
                 <div class="phone-info">
                     <p><a href="tel:0774124673" class="contact-link">+254-774-124-673</a></p>
+                    <p><a href="tel:0101637251" class="contact-link">+254-101-637-251</a></p>
                 </div>
                 <div class="phone-info">
                     <p>
